--- a/index.html
+++ b/index.html
@@ -335,6 +335,15 @@ rewards while showcasing their skills and strategic prowess.
                   <ion-icon name="link-outline"></ion-icon>
                 </a>
               </li>
+            <li>
+                <a href="" class="team-member">
+                  <figure>
+                    <img src="./assets/images/team-member-5.png" alt="Team member image">
+                  </figure>
+
+                  <ion-icon name="link-outline"></ion-icon>
+                </a>
+              </li>
               
             </ul>
 
